manifestsfile/issuer/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
  name: secure-ingress
  namespace: demo  
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: demo.thevy.xyz
    http:
      paths:
      - backend:
          service:
            name: backend  
            port:
              number: 5000  
        path: /api/getJoke/
        pathType: Prefix
      - backend:
          service:
            name: frontend 
            port:
              number: 3000  
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - demo.thevy.xyz
    secretName: letsencrypt-prod
